# neural-network

./: CMakeLists.txt  README.md  app  build.sh  compile_commands.json  debug.sh  main.c  main.s  mock-response.txt
.cache/clangd/index/: acc.cu.BBC5519213481DB6.idx  acc.cuh.6916DE530532A2A4.idx  add-id.cu.8718D87D43AA6043.idx  add-id.cuh.C7A7661CDA30CB12.idx  afmoe.cpp.C789585310B3BCBA.idx  amx.cpp.567A086FAF41BB82.idx  amx.h.E83F89BF1D5ABD2F.idx  apertus.cpp.51D9B2348E4E8E29.idx  arange.cu.F81603AF03B2C623.idx  arange.cuh.A9EA088BF55F0316.idx  arcee.cpp.05608734165337C9.idx  arch-fallback.h.AE5608FE8613002A.idx  arctic.cpp.B8CAEA44ED8014D7.idx  argmax.cu.DBAEEC56D28A68A5.idx  argmax.cuh.756601094411BBC4.idx  argsort.cu.92F8785DAA0B6082.idx  argsort.cuh.208FB532152FA9D8.idx  arwkv7.cpp.F7A24183B122B49B.idx  baichuan.cpp.0BCCF40016365138.idx  bailingmoe.cpp.E0844A7B8CBC9C55.idx  bailingmoe2.cpp.5D1306AD4B8B69E7.idx  bert.cpp.D09D6188DDCF520F.idx  binary-ops.cpp.35432FD81ABBA23B.idx  binary-ops.h.F9E6B324C2F34566.idx  binbcast.cu.02734AAA769F48B7.idx  binbcast.cuh.7CB428B397D52663.idx  bitnet.cpp.8DC1557D5D004D09.idx  bloom.cpp.5174DFEFB5BC2FA8.idx  chameleon.cpp.1CC2201D8585D42E.idx  chatglm.cpp.D22B907363DB0900.idx  clamp.cu.1AFB8B05B819E510.idx  clamp.cuh.886756B4356397DB.idx  codeshell.cpp.137DAD227622384E.idx  cogvlm.cpp.5BF1B14AC058D606.idx  cohere2-iswa.cpp.258840287A4FC3D2.idx  command-r.cpp.D0D693EB3CCAA7B4.idx  common.cuh.59BEC8129C7FE201.idx  common.h.4DC9577D0B23154E.idx  common.h.5C07363E23A7481A.idx  concat.cu.0F031AFB1F09C82C.idx  (+382 more)
c/: main.c
c/lib/: ai.c  ai.h  connections.c  connections.h  menu.c  menu.h  nodes.c  nodes.h  utils.c  utils.h
c/lib/neuro-engine/: connections.c  connections.h  core.h  engine.c  engine.h  memory.c  memory.h  nodes.c  nodes.h  search.c  search.h
inception/: 0.json  :w
js/: graph.js  graph.json  index.html
mocks/: 1.txt  2.txt  3.txt  4.txt
mocks/action-data/: 0.json  1.json  2.json  3.json
mocks/graph-data/: 0.txt  2.txt
